tests/fixtures/invalid/none_mod_int.py
# Cannot modulo None and Int
x: None = None % 1
